# server/app/src/go/skills/skillTypes.go
@@ -1,8 +1,16 @@
 package skills
 
-type Skill struct {
+type SkillDB struct {
 	UserID int    `json:"user_id"`
 	Topic  string `json:"topic"`
+}
+
+type CreateSkillRequest struct {
+	Topic string `json:"topic"`
+}
+
+type DeleteSkillRequest struct {
+	Topic string `json:"topic"`
 }
 
 type UpdateSkillRequest struct {
